# MeshODE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_submodules.sh  requirements.txt
data/: download.sh  filelist.txt
experiments/shapenet/: conformal_mapping_experiments.ipynb  deform_3_obj.py  launch_training.sh  shapenet_dataloader.py  train_shapenet.py
src/: callback.h  deform.h  rigid_deform.cc  rigid_rot_deform.cc  subdivision.h  uniformgrid.cc
src/app/: cad_deform.cc  coverage_deform.cc  inverse_deform.cc  rigid_deform.cc  rigid_rot_deform.cc
src/interface/: cad_layer.cc  cad_layer.h  deform_params.cc  deform_params.h  distance_layer.cc  distance_layer.h  graph_layer.cc  graph_layer.h  linear_layer.cc  linear_layer.h  mesh_tensor.cc  mesh_tensor.h  normalize.cc  normalize.h  pydeform.cc  rigid_layer.cc  rigid_layer.h
src/lib/: callback.h  deform.cc  deformer.cc  deformer.h  delaunay.cc  delaunay.h  distanceloss.h  edgeloss.h  linear.cc  linear.h  mesh.cc  mesh.h  meshcover.cc  subdivision.cc  subdivision.h  types.h  uniformgrid.cc  uniformgrid.h
src/python/: 3dn_process.py  Untitled.ipynb  cad_deform.py  cad_deform2.py  cad_neural_animate.py  cad_neural_deform.py  cad_neural_deform2.py  cad_neural_deform_general.py  deform_3_obj.py  graph_deform_layer.py  inverse_deform.py  neural_deformation.py  optimize_cad_deform.py  optimize_cad_fast_deform.py  optimize_rigid_deform.py  rigid_deform.py  rigid_deform_layer.py  train_utils.py
src/python/.2_obj_deform/: cad_deform.py  cad_neural_deform.py  cad_neural_deform_conformal.py  rigid_deform.py  test.py
src/python/layers/: cad_deform_layer.py  cad_loss_layer.py  chamfer_layer.py  deformation_layer.py  graph_deform_layer.py  graph_loss2_layer.py  graph_loss_layer.py  maf.py  neuralode.py  neuralode_fast.py  pointnet_model.py  reverse_deform_layer.py  reverse_loss_layer.py  rigid_loss_layer.py
src/pytorch/: optimize_rigid_deform.py  pydeform.cc  rigid_deform_layer.py  setup.py  test.py
tools/arap/: .gitignore  CMakeLists.txt  README.md
tools/arap/src/: cad_deform.cc  callback.h  coverage_deform.cc  deform.cc  deform.cpp  deform.h  delaunay.cc  delaunay.h  distanceloss.h  edgeloss.h  inverse_deform.cc  main.cc  mesh.cc  mesh.h  meshcover.cc  meshcover.h  reverse_deform.cc  rigid_deform.cc  simplify.cpp  subdivision.cc  subdivision.h  types.h  uniformgrid.cc  uniformgrid.h
